# advent

./: Cargo.toml
solutions/: Cargo.toml
solutions/src/: lib.rs  main.rs
solutions/src/y2023/: mod.rs
solutions/src/y2023/day1/: mod.rs
solutions/src/y2023/day2/: mod.rs
solutions/src/y2023/day3/: mod.rs
solutions/src/y2023/day4/: mod.rs
solutions/src/y2024/: mod.rs
solutions/src/y2024/day1/: mod.rs
solutions/src/y2024/day10/: mod.rs
solutions/src/y2024/day11/: mod.rs
solutions/src/y2024/day12/: mod.rs
solutions/src/y2024/day13/: mod.rs
solutions/src/y2024/day14/: mod.rs
solutions/src/y2024/day15/: grid.rs  mod.rs
solutions/src/y2024/day16/: mod.rs
solutions/src/y2024/day17/: computer.rs  mod.rs
solutions/src/y2024/day18/: mod.rs
solutions/src/y2024/day19/: mod.rs
solutions/src/y2024/day2/: mod.rs
solutions/src/y2024/day20/: mod.rs
solutions/src/y2024/day21/: mod.rs
solutions/src/y2024/day22/: mod.rs
solutions/src/y2024/day23/: mod.rs
solutions/src/y2024/day3/: mod.rs
solutions/src/y2024/day4/: mod.rs
solutions/src/y2024/day5/: mod.rs
solutions/src/y2024/day6/: mod.rs
solutions/src/y2024/day7/: mod.rs
solutions/src/y2024/day8/: mod.rs
solutions/src/y2024/day9/: mod.rs
solutions/src/y2024/inputs/: day21.txt
solutions/src/y2025/: mod.rs
solutions/src/y2025/day1/: mod.rs
solutions/src/y2025/day10/: mod.rs
solutions/src/y2025/day11/: mod.rs
solutions/src/y2025/day12/: mod.rs
solutions/src/y2025/day2/: mod.rs
solutions/src/y2025/day3/: mod.rs
solutions/src/y2025/day4/: mod.rs
src/: lib.rs
(+45 files in other folders)
